Update What I Do section: Replace Design with Engineer and fix text overflow

--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -34,7 +34,7 @@
 }
 .what-box-in {
   flex-direction: column;
-  height: 500px;
+  height: 650px;
   margin-left: 200px;
   position: relative;
   display: none;
@@ -199,7 +199,7 @@
   animation: whatBorders 1.2s 1 forwards;
 }
 .what-border2 svg {
-  height: 500px;
+  height: 650px;
   top: 50%;
   transform: translateY(-50%);
   position: absolute;
